manifest/config-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: prometheus-grafana
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: prometheus-kube-prometheus-alertmanager
      port: 9093
      targetPort: 9093
      protocol: TCP
    - name: prometheus-kube-prometheus-prometheus
      port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
